--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
                         <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
                     </ul> 
                     <ul class="header-hero list" >
-                        <li class="header-contacts"><a href="mailto:info@devstudio.com" class="header-second-link link">info@devstudio.com</a></li>
-                        <li class="header-contacts"><a href="tel:+38-096-111-11-11" class="header-second-link link"> +38 096 111 11 11</a></li>
+                        <li class="header-contacts"><a href="mailto:info@devstudio.com" class="header-second-link link">
+                            <svg class="header-icon" width="16" height="12">
+                                <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
+                            </svg>info@devstudio.com</a></li>
+                        <li class="header-contacts"><a href="tel:+38-096-111-11-11" class="header-second-link link">
+                            <svg class="header-icon" width="10" height="16">
+                                <use href="./images/icons/symbol-defs.svg#icon-smartphone"></use>
+                            </svg>+38 096 111 11 11</a></li>
                     </ul>   
                 </nav>
             </div>  
@@ -49,14 +55,29 @@
                             <p class="benefits-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
                         <li class="benefits-item">
+                            <div class="background-icon">
+                                <svg class="benefits-icon" width="70" height="70">
+                                    <use href="./images/icons/symbol-defs.svg#icon-clock"></use>
+                                </svg>
+                            </div>
                             <h3 class="benefits-title">Пунктуальность</h3>
                             <p class="benefits-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
                         <li class="benefits-item">
+                            <div class="background-icon">
+                                <svg class="benefits-icon" width="70" height="70">
+                                    <use href="./images/icons/symbol-defs.svg#icon-diagram"></use>
+                                </svg>
+                            </div>
                             <h3 class="benefits-title">Планирование</h3>
                             <p class="benefits-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
                         <li class="benefits-item">
+                            <div class="background-icon">
+                                <svg class="benefits-icon" width="70" height="70">
+                                    <use href="./images/icons/symbol-defs.svg#icon-astronaut"></use>
+                                </svg>
+                            </div>
                             <h3 class="benefits-title">Современные технологии</h3>
                             <p class="benefits-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
@@ -84,16 +105,32 @@
                                 <p lang="en" class="team-position">Product Designer</p>
                                 <ul class="team-soc-list list">
                                     <li class="team-soc-item">
-                                        <a href="" class="team-soc-link link"></a>
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
                                     </li> 
                                     <li class="team-soc-item">
-                                        <a href="" class="team-soc-link link"></a>
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
                                     </li> 
                                     <li class="team-soc-item">
-                                        <a href="" class="team-soc-link link"></a>
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
                                     </li> 
                                     <li class="team-soc-item">
-                                        <a href="" class="team-soc-link link"></a>
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
                                     </li>         
                                 </ul>
                             </div>
@@ -102,7 +139,37 @@
                             <img src="./images/worker2.jpg" alt="Ольга Репина" width="270" height="260">
                             <div class="team-margin">
                                 <p class="team-name">Ольга Репина</p>
-                                <p lang="en" class="team-position">Frontend Developer</p> 
+                                <p lang="en" class="team-position">Frontend Developer</p>
+                                <ul class="team-soc-list list">
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li> 
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li> 
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li> 
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>         
+                                </ul> 
                             </div>  
                         </li>
                         <li class="team-item">
@@ -110,6 +177,36 @@
                             <div class="team-margin">
                                 <p class="team-name">Николай Тарасов</p>
                                 <p lang="en" class="team-position">Marketing</p>
+                                <ul class="team-soc-list list">
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li> 
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li> 
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li> 
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>         
+                                </ul>
                             </div>
                         </li>
                         <li class="team-item">
@@ -117,23 +214,138 @@
                             <div class="team-margin">
                                 <p class="team-name">Михаил Ермаков</p>
                                 <p lang="en" class="team-position">UI Designer</p>
+                                <ul class="team-soc-list list">
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li> 
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li> 
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li> 
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link link">
+                                            <svg class="clients-icon" width="20" height="20">
+                                                <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>         
+                                </ul>
                             </div> 
                         </li>
                     </ul>
+                </div>
+            </section>
+            <section class="clients">
+                <div class="container">
+                    <h2 class="clients-title">Постоянные клиенты</h2>
+                    <ul class="clients-list list">
+                        <li class="clients-item">
+                            <a href="" class="clients-link link">
+                                <svg class="clients-icon" width="106" height="60">
+                                    <use href="./images/icons/symbol-defs.svg#icon-Logo"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link link">
+                                <svg class="clients-icon" width="106" height="60">
+                                    <use href="./images/icons/symbol-defs.svg#icon-Logo1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link link">
+                                <svg class="clients-icon" width="106" height="60">
+                                    <use href="./images/icons/symbol-defs.svg#icon-Logo2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link link">
+                                <svg class="clients-icon" width="106" height="60">
+                                    <use href="./images/icons/symbol-defs.svg#icon-Logo3"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link link">
+                                <svg class="clients-icon" width="106" height="60">
+                                    <use href="./images/icons/symbol-defs.svg#icon-Logo4"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link link">
+                                <svg class="clients-icon" width="106" height="60">
+                                    <use href="./images/icons/symbol-defs.svg#icon-Logo6"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>                
                 </div>
             </section>        
                 
         </main>
         <footer class="footer">
-            <div class="container">
-                <a href="" class="footer-logo link"><span class="logo-start">Web</span><span class="logo-footer-end">Studio</span></a>
-               <address>
-                    <ul class="footer-list list">
-                        <li class="footer-item"><a href="https://goo.gl/maps/usRxasDixCcgagAA9" target="_blank" class="footer-position link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li class="footer-item"><a href="mailto:info@example.com" class="footer-link link">info@example.com</a></li>
-                        <li class="footer-item"><a href="tel:+38-096-111-11-11" class="footer-link link">+38 096 111 11 11</a></li>
-                    </ul> 
-                </address>
+            <div class="container footer-flex">
+                <div>
+                    <a href="" class="footer-logo link"><span class="logo-start">Web</span><span class="logo-footer-end">Studio</span></a>
+                    <address>
+                        <ul class="footer-list list">
+                            <li class="footer-item"><a href="https://goo.gl/maps/usRxasDixCcgagAA9" target="_blank" class="footer-position link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                            <li class="footer-item"><a href="mailto:info@example.com" class="footer-link link">info@example.com</a></li>
+                            <li class="footer-item"><a href="tel:+38-096-111-11-11" class="footer-link link">+38 096 111 11 11</a></li>
+                        </ul> 
+                    </address>
+                </div>
+                <div class="join">
+                    <h2 class="join-title">присоединяйтесь</h2>
+                    <ul class="join-list list">
+                        <li class="join-item">
+                            <a href="" class="join-link link">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="join-item" >
+                            <a href="" class="join-link link">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="join-item">
+                            <a href="" class="join-link link">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="join-item">
+                            <a href="" class="join-link link">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                    
             </div>  
         </footer>
 </body>
