--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,14 @@
                         <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
                     </ul> 
                     <ul class="header-hero list" >
-                        <li class="header-contacts"><a href="mailto:info@devstudio.com" class="header-second-link link">info@devstudio.com</a></li>
-                        <li class="header-contacts"><a href="tel:+38-096-111-11-11" class="header-second-link link"> +38 096 111 11 11</a></li>
+                        <li class="header-contacts"><a href="mailto:info@devstudio.com" class="header-second-link link">
+                            <svg class="header-icon" width="16" height="12">
+                                <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
+                            </svg>info@devstudio.com</a></li>
+                        <li class="header-contacts"><a href="tel:+38-096-111-11-11" class="header-second-link link">
+                            <svg class="header-icon" width="10" height="16">
+                                <use href="./images/icons/symbol-defs.svg#icon-smartphone"></use>
+                            </svg>+38 096 111 11 11</a></li>
                     </ul>   
                 </nav>
             </div>  
@@ -111,15 +117,51 @@
             </section>
         </main>
         <footer class="footer">
-            <div class="container">
-                <a href="" class="footer-logo link"><span class="logo-start">Web</span><span class="logo-footer-end">Studio</span></a>
-               <address>
-                    <ul class="footer-list list">
-                        <li class="footer-item"><a href="https://goo.gl/maps/usRxasDixCcgagAA9" target="_blank" class="footer-position link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li class="footer-item"><a href="mailto:info@example.com" class="footer-link link">info@example.com</a></li>
-                        <li class="footer-item"><a href="tel:+38-096-111-11-11" class="footer-link link">+38 096 111 11 11</a></li>
-                    </ul> 
-                </address>
+            <div class="container footer-flex">
+                <div>
+                    <a href="" class="footer-logo link"><span class="logo-start">Web</span><span class="logo-footer-end">Studio</span></a>
+                    <address>
+                        <ul class="footer-list list">
+                            <li class="footer-item"><a href="https://goo.gl/maps/usRxasDixCcgagAA9" target="_blank" class="footer-position link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                            <li class="footer-item"><a href="mailto:info@example.com" class="footer-link link">info@example.com</a></li>
+                            <li class="footer-item"><a href="tel:+38-096-111-11-11" class="footer-link link">+38 096 111 11 11</a></li>
+                        </ul> 
+                    </address>
+                </div>
+                <div class="join">
+                    <h2 class="join-title">присоединяйтесь</h2>
+                    <ul class="join-list list">
+                        <li class="join-item">
+                            <a href="" class="join-link link">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="join-item" >
+                            <a href="" class="join-link link">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="join-item">
+                            <a href="" class="join-link link">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="join-item">
+                            <a href="" class="join-link link">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                    
             </div>  
         </footer>
 
