--- a/index.html
+++ b/index.html
@@ -356,11 +356,15 @@
                 </div>
                 <form class="subscribe">
                     <p class="subscribe-title">Подпишитесь на рассылку</p>
-                    <input type="email" name="email" class="subscribe-input" placeholder="E-mail">
-                    <button type="submit" class="subscribe-btn btn">Подписаться<svg class="subscribe-send" width="24" height="24">
-                            <use href="./images/icons/symbol-defs.svg#icon-send"></use>
-                        </svg>
-                    </button>
+                    <div class="subscribe-cont">
+                        <input type="email" name="email" class="subscribe-input" placeholder="E-mail">
+                        <button type="submit" class="subscribe-btn ">Подписаться
+                            <svg class="subscribe-send" width="24" height="24">
+                                <use href="./images/icons/symbol-defs.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </div>
+                    
                 </form>
             </div>  
         </footer>
